--- a/src/dontbreaktheice.tex
+++ b/src/dontbreaktheice.tex
@@ -114,9 +114,11 @@ function initialise() {
  * For example add callbacks and set the correct colors.
  */
 function initialiseButtons() {
+    % Disables the rectangle around a button after the click
+    app.focusRect = false;
+
     % Assign each button the coresponding function and disable the highlights
     this.getField("restart").setAction("MouseUp", "restart();");
-    this.getField("restart").highlight="none";
 
     var funcName = "revealField";
     for (var x = 0; x < FIELD_WIDTH; x++) {
