--- a/src/memory.tex
+++ b/src/memory.tex
@@ -42,7 +42,7 @@ In that case the reveiling player gets another turn.";
 % Outside variables
 const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
 const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
-const SCREEN_TEXT_WIDTH = 300;
+const SCREEN_TEXT_SIZE = 300;
 const MAX_PLAYERS = AFMakeNumber(\playerCount);
 const MAX_PAIRS = (FIELD_WIDTH * FIELD_HEIGHT) / 2;
 
@@ -133,9 +133,11 @@ function initialise() {
  * For example add callbacks.
  */
 function initialiseButtons() {
+    % Disables the rectangle around a button after the click
+    app.focusRect = false;
+
     % Assign each button the coresponding function and disable the highlights
     this.getField("restart").setAction("MouseUp", "restart();");
-    this.getField("restart").highlight="none";
 
     var funcName = "revealField";
     var cell;
@@ -144,7 +146,7 @@ function initialiseButtons() {
             var callbackName = funcName + "(" + x.toString() + "," + y.toString() + ");";
             cell = this.getField("pos" + x + "-" + y);
             cell.setAction("MouseDown", callbackName);
-            cell.textSize = SCREEN_TEXT_WIDTH / Math.max(FIELD_HEIGHT, FIELD_WIDTH);
+            cell.textSize = SCREEN_TEXT_SIZE / Math.max(FIELD_HEIGHT, FIELD_WIDTH);
             cell.alignment = "center";
         }
     }
