--- a/src/mills.tex
+++ b/src/mills.tex
@@ -190,9 +190,11 @@ function initialise() {
  * For example add callbacks and set the correct colors.
  */
 function initialiseButtons() {
+    % Disables the rectangle around a button after the click
+    app.focusRect = false;
+
     % Assign each button the coresponding function and disable the highlights
     this.getField("restart").setAction("MouseUp", "restart();");
-    this.getField("restart").highlight="none";
 
     % Set the callbacks and attributes of each small field
     var funcName = "place";
