--- a/src/chess.tex
+++ b/src/chess.tex
@@ -214,7 +214,6 @@ function initialiseButtons() {
             var callbackName = funcName + "(" + m.toString() + "," + n.toString() + ");";
             var c = this.getField("cell" + m + "-" + n);
             c.setAction("MouseDown", callbackName);
-            c.alignment = "center";
             c.textSize = SCREEN_TEXT_SIZE / Math.max(BOARD_HEIGHT, BOARD_WIDTH);
             c.borderWidth = 3;
         }
@@ -226,7 +225,6 @@ function initialiseButtons() {
         cell.setAction("MouseDown", "promotePawn(" + i.toString() + ")");
         cell.value = PIECE_SYMBOLS[QUEEN + i];
         cell.hidden = true;
-        cell.alignment = "center";
     }
 
     % Process button setup
@@ -1321,7 +1319,7 @@ function printInfoText(text) {
                     \xintFor* #2 in {\xintSeq{0}{\boardWidth-1}} \do {%
                         \TextField[%
                             name=cell#1-#2, bordercolor=white,%
-                            width=\blocksize, height=\blocksize, readonly%
+                            width=\blocksize, height=\blocksize, align=1, readonly%
                         ]{}%
                         \xintifForLast{}{\hspace{3pt}}%
                     }\vspace{3pt}\\[-1pt]%
@@ -1336,7 +1334,7 @@ function printInfoText(text) {
                 \xintFor* #1 in {\xintSeq{0}{3}} \do {%
                     \begin{tcolorbox}
                         \TextField[
-                            name=promote#1, width=\linewidth, bordercolor=gray, readonly
+                            name=promote#1, width=\linewidth, bordercolor=gray, align=1, readonly
                         ]{}
                     \end{tcolorbox}
                     % Have the cell divider for all elements
